Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16508

spider: sql_mode not maintained between spider node and data nodes

    XMLWordPrintable

Details

    Description

      This was noticed some time ago and I believe is still present. No explicit bug report was made at the time.

      If the spider node and data nodes have a different sql_mode setup then this may cause issues.

      Example seen was to have sql_mode = STRICT_TRANS_TABLES on data nodes and the spider node and some input data which was accepted on the spider node was rejected by the data node as not being valid. This broke the data load. Other mismatches could also trigger issues.

      My expectation would for the spider node to validate the data nodes' sql_mode matches the spider node, or to push out the spider node's current sql_mode setting (or when it changes as we can have session local sql_nodes) to the data nodes on connection or as the value changes.

      I think this still applies in spider on 10.3.

      Attachments

        Issue Links

          Activity

            People

              Kentoku Kentoku Shiba (Inactive)
              sjmudd Simon Mudd
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d 0.5h
                  3d 0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.