MDEV-16508 spider: sql_mode not maintained between spider node and data nodes